/**
 * 开源代码，仅供学习和交流研究使用，商用请联系三丙
 * 微信：mohan_88888
 * 抖音：程序员三丙
 * 付费课程知识星球：https://t.zsxq.com/aKtXo
 */
syntax = "proto3";

package infrastructureProto;

option java_package = "sanbing.jcpp.proto.gen";
option java_outer_classname = "ClusterProto";

message ServiceInfo {
  string serviceId = 1;
  repeated string serviceTypes = 2;
  SystemInfoProto systemInfo = 10;
}

message SystemInfoProto {
  int64 cpuUsage = 1;
  int64 cpuCount = 2;
  int64 memoryUsage = 3;
  int64 totalMemory = 4;
  int64 diskUsage = 5;
  int64 totalDiscSpace = 6;
}
